--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,20 +1,17 @@
-header ul {
-    float: right;
+header p {
+    display: inline-block;
     margin: 0;
-    padding: 0;
+    padding: 10px 15px;
+    text-decoration: none;
+    background-color: aqua;
+    border: 1px solid blue;
 }
 
-header ul li {
-    display: inline;
-    float: left;
-}
-
-header a {
+.navbar {
+    margin: 0;
     display: inline-block;
     padding: 10px 15px;
     text-decoration: none;
-    font-weight: bold;
-    color: black;
     background-color: aqua;
     border: 1px solid blue;
 }
