--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,17 +1,15 @@
-header p {
-    display: inline-block;
+header {
+    display: flex;
+    justify-content: space-between;
     margin: 0;
-    padding: 10px 15px;
     text-decoration: none;
-    background-color: aqua;
-    border: 1px solid blue;
 }
 
 .navbar {
     margin: 0;
-    display: inline-block;
-    padding: 10px 15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     text-decoration: none;
-    background-color: aqua;
-    border: 1px solid blue;
+    width:30%;
 }
