--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,11 @@
 footer {
-    /* display: flex; */
-    justify-content: space-around;
+    display: flex;
+    width: 100%;
+    position: absolute;
     margin: 0;
+    bottom: 0;
+    left:0;
+    right:0;
+    justify-content: space-between;
     text-decoration: none;
 }
