Adding more functionality to the Portfolio.js; adding icons for GitHub and deployed URL live links that open each in a new browser, changed the formatting of the cards to columns, added 5 deployed and live projects so far.  Adding various icon/button/box/stack imports to the Porfolio.js.  Modifying the footer.js to be sticky, removing some unused div's globally, and changing sections to divs where appropriate

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 footer {
     display: flex;
     width: 100%;
-    position: absolute;
+    position: sticky;
     margin: 0;
     bottom: 0;
     left:0;
