--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,8 +8,17 @@ header {
 .navbar {
     margin: 0;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
     text-decoration: none;
     width:30%;
 }
+
+@media screen and (max-width: 768px) {
+    header,
+    .navbar {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
