--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,6 +5,8 @@ footer {
     bottom: 0;
     left:0;
     right:0;
-    justify-content: space-between;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: center;
     text-decoration: none;
 }
